--- a/ultimate-social-media-icons/css/sfsi-admin-style.css
+++ b/ultimate-social-media-icons/css/sfsi-admin-style.css
@@ -7922,23 +7922,23 @@ ul.sfsi_icn_listing8.sfsi_closerli.popupDesktopMobileUl li label {
 }
 
 .icns_tab_3 .row_17_29 {
-    background: url(../images/icons_theme/default/default_copylink.png) no-repeat;
+    background: url(../images/icons_theme/flat_square/flat_square_copylink.png) no-repeat;
     background-position: 0;
     background-size: contain;
 }
 
 .icns_tab_3 .row_18_29 {
-    background: url(../images/icons_theme/default/default_copylink.png) no-repeat;
+    background: url(../images/icons_theme/flat_squared/flat_squared_copylink.png) no-repeat;
     background-position: 0;
     background-size: contain;
 }
 .icns_tab_3 .row_19_29 {
-    background: url(../images/icons_theme/default/default_copylink.png) no-repeat;
+    background: url(../images/icons_theme/icons_only/icons_only_copylink.png) no-repeat;
     background-position: 0;
     background-size: contain;
 }
 .icns_tab_3 .row_20_29 {
-    background: url(../images/icons_theme/default/default_copylink.png) no-repeat;
+    background: url(../images/icons_theme/animated_icons/animated_icons_copylink.gif) no-repeat;
     background-position: 0;
     background-size: contain;
 }
